.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/aln_Calendar_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>aln_Calendar_Period_End_Date__c</fullName>
    <formula>tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c</formula>
    <label>Calendar Period End Date</label>
    <type>Date</type>
</CustomField>