.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <description>This is IRD reporting</description>
    <formula>&quot;WK&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for IRD reporting</inlineHelpText>
    <label>Pay Frequency</label>
    <type>Text</type>
</CustomField>