.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/listViews/Pay_Batch_Summary.listView-meta.xml
<ListView>
    <fullName>Pay_Batch_Summary</fullName>
    <columns>tc9_pr__Pay_Batch__c</columns>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Calendar_Period__c</columns>
    <columns>tc9_pr__Total_Quantity__c</columns>
    <columns>tc9_pr__Gross__c</columns>
    <columns>tc9_pr__Pre_Tax_Deductions__c</columns>
    <columns>tc9_pr__Taxable_Earnings__c</columns>
    <columns>tc9_pr__Total_Tax_AUS__c</columns>
    <columns>tc9_pr__Post_Tax_Deductions__c</columns>
    <columns>tc9_pr__Expense_Reimbursements__c</columns>
    <columns>tc9_pr__Net_Earning__c</columns>
    <columns>tc9_pr__Total_Employer_Contribution_SG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Pay_Batch__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pay Batch Summary</label>
</ListView>